--- a/styles.css
+++ b/styles.css
@@ -1,178 +1,296 @@
+* {
 
-        * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    /* overflow-x: hidden; */
+    z-index: 1;
+}
 
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
+::-webkit-scrollbar {
 
-        html,
-        body {
+    display: none;
+}
 
-            width: 100%;
-            height: 100%;
-            background-color: rgb(44, 38, 38)
-        }
+html,
+body {
 
-        .container {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0)
+}
 
-            /* background-color: red; */
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            flex-direction: column;
+.container {
 
-        }
-
-        .container nav {
-
-            width: 100%;
-            height: 10%;
-            background-color: rgba(0, 0, 0, 0.934);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            font-family: Arial, Helvetica, sans-serif;
-            padding: 5px;
-        }
-
-        .container nav img {
-
-            width: 80px;
-
-        }
+    background-color: rgb(39, 33, 33);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    overflow-x: hidden;
+    position: relative;
 
 
-        .container nav h1 {
+}
 
-            font-size: 25px;
-            color: rgb(255, 0, 162);
-        }
+.container nav {
 
-        .container nav div {
+    width: 100%;
+    height: 10%;
+    background-color: rgba(80, 12, 148, 0.769);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px;
+}
 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+.container nav img {
 
-        .songdetails {
+    width: 80px;
 
-            height: 90%;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
+}
 
-        }
 
-        .coverimg {
+.container nav h1 {
 
-            width: 600px;
-            height: 300px;
-            /* height: fit-content; */
-            background-position: center;
-            background-size: cover;
+    font-size: 25px;
+    color: rgb(255, 0, 162);
+}
 
-            animation: coverimg both 1s;
+.container nav div {
 
-            background-repeat: no-repeat;
-            /* margin-top: 20px; */
-            border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.songdetails {
+
+    height: fit-content;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /* border: 2px solid red; */
+    margin-top: 5%;
+    padding: 20px 0;
+    background-color: rgba(0, 0, 0, 0.671);
+    border-radius: 20px;
+    position: relative;
+    overflow: hidden;
+    /* background-image: url('https://i.pinimg.com/originals/f1/20/f1/f120f1bdde457ba9208083e5d9e957d5.gif');
+    background-repeat: no-repeat;
+    background-size: cover; */
+
+
+}
+
+.coverimg {
+
+    width: 600px;
+    height: 300px;
+    /* height: fit-content; */
+    background-position: center;
+    background-size: cover;
+
+    animation: coverimg both 1s;
+
+    background-repeat: no-repeat;
+    /* margin-top: 20px; */
+    border-radius: 30px 5px 30px 5px;
+    /* filter: brightness(.5); */
+
+    position: relative; 
        
-            /* border: 2px solid rebeccapurple; */
-            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.7),
+    /* box-shadow: 1px 1px 1px 1px rgb(0, 255, 166); */
 
 
 
 
-        }
 
-        @keyframes coverimg {
+}
 
-            from {
+.dim{
 
-                transform: translateX(100%);
-            }
+    animation: dim 2s infinite alternate-reverse;
+}
 
-            to {
+@keyframes dim {
 
-                transform: translateX(0%);
-            }
+    from {
 
-        }
+      
+    filter: grayscale(100);
+    opacity: 0.5;
+        
+    }
 
-        .playtime {
+    to {
+        
 
+        filter: grayscale(0);
+       
 
-            width: 600px;
-            color: red;
-        }
+        
+    }
+}
 
-        marquee {
+@keyframes coverimg {
 
-            width: 500px;
-            border-radius: 20px;
-            color: white;
-            /* background-color: black; */
-            padding: 10px;
-            font-family: monospace;
-            /* text-align: left; */
-        }
+    from {
 
-        .controls {
-            border: 2px solid rebeccapurple;
-            width: 600px;
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: white;
-            border-radius: 20px;
-            gap: 10%;
-            padding: 5px;
-        }
+        transform: translateX(100%);
+    }
 
-        .controls img {
+    to {
+
+        transform: translateX(0%);
+    }
+
+}
+
+.playtime {
 
 
-            width: 40px;
+    width: 590px;
+    /* color: red; */
+}
 
-        }
+marquee {
 
-        #play {
+    width: 500px;
+    border-radius: 20px;
+    color: white;
+    /* background-color: black; */
+    padding: 10px;
+    font-family: monospace;
+    /* text-align: left; */
+}
 
-            cursor: pointer;
-            width: 45px;
-            transition: .2s ease;
-        }
+.controls {
+    /* border: 2px solid rebeccapurple; */
+    width: 600px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    gap: 10%;
+    padding: 5px;
 
-        #pause {
-            cursor: pointer;
-            display: none;
+}
 
-        }
+.controls img {
 
 
-        #play:hover {
+    width: 40px;
+    animation: playbtn both .5s;
 
-            transform: scale(0.95);
-        }
 
-        @media (max-width:768px) {
-            .coverimg {
-                width: 90%;
-            }
+}
 
-            .controls,
-            .playtime,
-            marquee {
-                width: 80%;
-            }
 
-        }
+@keyframes playbtn {
+
+    from {
+
+        opacity: 0;
+
+    }
+
+    to {
+
+        opacity: 10;
+    }
+}
+
+#play {
+
+    cursor: pointer;
+    width: 45px;
+    transition: .2s ease;
+    background-color: white;
+}
+
+#pause {
+    cursor: pointer;
+    display: none;
+
+}
+
+#title {
+
+
+    animation: title alternate-reverse 1s infinite;
+    font-size: 25px;
+    /* color: black; */
+    text-align: center;
+    width: fit-content;
+
+}
+
+
+.disc {
+
+    background-image: url('https://64.media.tumblr.com/b583c317eddacd3d71504eca5fe905c4/16269574b23c30c4-bf/s500x750/e859b2a542e9ee67be5caed7db538598f58d5614.gif');
+
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 100;
+    top: 0%;
+    left: 0%;
+    background-color: rgba(255, 255, 255, 0);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    filter: blur(5px);
+    z-index: -1;
+    display: none;
+
+    
+
+}
+
+
+@keyframes title {
+
+    from {
+
+        opacity: 0.5;
+
+    }
+
+    to {
+
+        opacity: 1;
+
+    }
+}
+
+
+
+@media (max-width:768px) {
+    .coverimg {
+        width: 90%;
+    }
+
+    .controls,
+    .playtime,
+    marquee {
+        width: 80%;
+    }
+
+    .songdetails {
+        width: 100%;
+    }
+
+}
