--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 .container {
 
-    background-color: rgb(39, 33, 33);
+    background-color: rgb(255, 238, 238);
     width: 100%;
     height: 100%;
     display: flex;
@@ -39,19 +39,32 @@ body {
 
     width: 100%;
     height: 10%;
-    background-color: rgba(80, 12, 148, 0.769);
+    background-color: rgb(40, 7, 72);
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 5px;
+    padding: 5px 10px;
 }
 
 .container nav img {
 
     width: 80px;
+    animation: logo 1s alternate-reverse infinite;
 
+}
+
+
+@keyframes logo {
+from{
+
+    opacity: .5;
+}    
+to{
+
+    opacity: 1;
+}
 }
 
 
@@ -66,6 +79,15 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#menu{
+
+    color:rgb(255, 0, 187);
+    font-size: 28px;
+    margin-left: 10px;
+    font-weight: bolder;
+
 }
 
 .songdetails {
@@ -133,8 +155,8 @@ body {
     /* rotate: -90deg; */
     display: none;
     margin-left:-10%;
-    rotate: -90deg;
-    width: 50px;
+
+    width: 90px;
 }
 
 /* @keyframes dim {
@@ -260,7 +282,7 @@ marquee {
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 100;
+    /* z-index: 100; */
     top: 0%;
     left: 0%;
     background-color: rgba(255, 255, 255, 0);
@@ -270,7 +292,7 @@ marquee {
 
     filter: blur(5px);
     z-index: -1;
-    display: none;
+    display: none   ;
 
     
 
@@ -302,7 +324,15 @@ marquee {
     .controls,
     .playtime,
     marquee {
-        width: 80%;
+        width: 90%;
+        padding: 5px;
+    
+    }
+
+    #volslider{
+
+        width: 90px;
+        margin-left: 5px;
     }
 
     .songdetails {
