--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ to{
     font-size: 28px;
     margin-left: 10px;
     font-weight: bolder;
+    transition: .5s all;
 
 }
 
@@ -298,6 +299,77 @@ marquee {
 
 }
 
+footer{
+
+    width: 100%;
+    height: 50px;background-color:rgb(40, 7, 72);
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer img{
+
+    display: none;
+}
+
+footer h1{
+
+    color:rgb(255, 0, 162) ;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+
+
+.playlists {
+
+position: absolute;
+z-index: 10;
+width: 100%;
+height: 90%;
+bottom: 0px;
+background-color: rgb(0, 0, 0);
+text-align: center;
+transition: .2s all;
+color: white;
+display: none;
+}
+
+
+
+.playlistanim{
+
+    animation: playlists 1s 1 ;
+}
+
+.pllsongs {
+
+    width: 100%;
+    height: 100px;
+    background-color: wheat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+}
+
+@keyframes playlists {
+    from{
+
+        transform: translatex(100%);
+        opacity: 0;
+
+    }
+
+    to {
+
+        transform: translatex(0%);
+        opacity: 1;
+    }
+}
 
 @keyframes title {
 
@@ -336,7 +408,12 @@ marquee {
     }
 
     .songdetails {
-        width: 100%;
+        width: 97%;
+    }
+
+    #title{
+
+        font-size: 22px;
     }
 
 }
