--- a/styles.css
+++ b/styles.css
@@ -120,29 +120,17 @@ to{
     height: 300px;
     /* height: fit-content; */
     background-position: center;
-    background-size: cover;
-
+    background-size: contain;
+   background-color: rgba(4, 5, 5, 0.671);
     animation: coverimg both 1s;
-
     background-repeat: no-repeat;
-    /* margin-top: 20px; */
-    border-radius: 30px 5px 30px 5px;
-    /* filter: brightness(.5); */
-
+    border-radius: 30px 30px 30px 30px;
     position: relative; 
-       
-    /* box-shadow: 1px 1px 1px 1px rgb(0, 255, 166); */
-
 
 
 
 
 }
-
-/* .dim{
-
-    animation: dim 2s infinite alternate-reverse;
-} */
 
 #volume{
 
@@ -160,25 +148,6 @@ to{
     width: 90px;
 }
 
-/* @keyframes dim {
-
-    from {
-
-      
-    filter: grayscale(100);
-    opacity: 0.5;
-        
-    }
-
-    to {
-        
-
-        filter: grayscale(0);
-       
-
-        
-    }
-} */
 
 @keyframes coverimg {
 
@@ -206,14 +175,12 @@ marquee {
     width: 500px;
     border-radius: 20px;
     color: white;
-    /* background-color: black; */
     padding: 10px;
     font-family: monospace;
-    /* text-align: left; */
+   
 }
 
 .controls {
-    /* border: 2px solid rebeccapurple; */
     width: 600px;
     height: 60px;
     display: flex;
