--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ to{
     /* border: 2px solid red; */
     margin-top: 5%;
     padding: 20px 0;
-    background-color: rgba(0, 0, 0, 0.671);
+    background-color: rgba(0, 0, 0, 0.888);
     border-radius: 20px;
     position: relative;
     overflow: hidden;
@@ -118,13 +118,12 @@ to{
 
     width: 600px;
     height: 300px;
-    /* height: fit-content; */
     background-position: center;
     background-size: contain;
-   background-color: rgba(4, 5, 5, 0.671);
+   background-color:rgb(0 0 0 / 16%);
     animation: coverimg both 1s;
     background-repeat: no-repeat;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 20px 10px 10px 10px;
     position: relative; 
 
 
